# smartHomeCloud

./: README
archive/: .gitignore
archive/Kamailio-4.3.4-patch/: msilo.patch  siptrace.patch
archive/Kamailio-4.3.5-patch/: modulelst.patch  msilo.patch
archive/Thrift/: service.thrift
archive/kamailio-4.3.2/: Makefile.defs  autover.h  cfg.tab.c  cfg.tab.h  config.mak  lex.yy.c
archive/kamailio-4.3.2/etc/: kamailio源码修改记录.docx  kamctlrc
archive/kamailio-4.3.2/parser/: msg_parser.h
doc/: Kamailio安装配置指南.docx  Kamailio源码之patch文件使用说明.docx  Kamailio源码修改指南.docx  云端概要设计说明书.doc  智能家居云平台-API接口.doc  智能家居云平台数据库设计.docx  智能家居系统-安全设计.docx
doc/云端与网关通信协议/: 云端与网关通信协议初稿_V1.doc  云端与网关通信协议初稿_V2.doc  云端与网关通信协议初稿_V3.doc  云端与网关通信协议初稿_V4.doc  云端与网关通信协议初稿_V5.doc  云端与网关通信协议初稿_V6.doc
src/KamailioPatch/: siptrace.patch
src/daemons/: CMakeLists.txt
src/daemons/etc/: sip-daemon.conf
src/daemons/include/: Common.h  CommunicateInterface.h  SDConfig.h  ServiceConstants.h  ServiceTypes.h  SharedConstants.h  SharedService.h  SharedTypes.h  SipCommon.h  SipService.h  Utils.h
src/daemons/src/: CMakeLists.txt  CommunicateInterface.cpp  SDConfig.cpp  Server.cpp  ServiceConstants.cpp  ServiceTypes.cpp  SharedConstants.cpp  SharedService.cpp  SharedTypes.cpp  SipService.cpp  Utils.cpp
src/db_script/: init.sql  smarthomecloud.sql
src/website/: .env.alichangchun  .env.alijiangxi  .env.alitest  .env.changchun223  .env.example  .env.jiangxi222  .env.test150  .gitignore  composer.json  readme.md
src/website/app/: Address.php  Admin.php  AdminGroup.php  AdminManage.php  AdminRole.php  AppAuthCode.php  AppVersionUpdating.php  Banner.php  CloudPhoto.php  CmdDictionary.php  DefineAction.php  DefineCtrl.php  DefineLinkAge.php  (+55 more)
(+342 files in other folders)
